Turn into the Catalina Site

--- a/index.html
+++ b/index.html
@@ -1,9 +1,126 @@
-<html>
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Catalina XIII</title>
+    <style>
+        *{
+        background-color: #e1ebff;
+        font-family: Arial, Helvetica, sans-serif; 
+        }
+        .header {
+            text-align: center;
+        }
+    </style>
+</head>
 <body>
-  <h1>Vanessa Gomez</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+    <div class="navigation"></div>
+
+    <div class="header">
+        <img src="C:\Users\Vany\Documents\DevProject\resources\title card.PNG"/>
+        <h1>Welcome to Catalina Fantasy Football</h1>
+    </div>
+   
+    <div class="members">
+        <h2>Members of the 2021-2022 Season</h2>
+        <ul>
+            <li>Richie Balls</li>
+            <li>Sibs</li>
+            <li>Swarlos</li>
+            <li>Chris</li>
+            <li>Odi</li>
+            <li>Gina</li>
+            <li>Roger</li>
+            <li>???</li>
+            <li>???</li>
+            <li>???</li>
+            <li>???</li>
+            <li>???</li>
+            <li>???</li>
+            <li>???</li>
+        </ul>
+    </div>
+    <div class="rules">
+        <h2>Rules:</h2>
+        <h3>Trades</h3>
+            <p>Trade deadline is November 9th, 2019. Trades will go through uncontended, within 24 hours of the commish being notified.  This is a trial year for this in this league and will be reflected upon next season based on how teams trade.  Please protect the integrity of the league by not trading your best players if you are no longer in playoff contention.  Remember, you can still win good money for being point leader week-to-week.</p>
+        <h3>Position Points</h3>
+        <h4>Passing</h4>                                                                    
+            <ul>
+            <li>Passing Touchdown 4pts</li>                                       
+            <li>Passing Yards 1pt each 25 yards</li>                                                                                
+            <li>Interception  -1pt</li>
+            </ul>
+        <h4>Rushing</h4>                                                                  
+            <ul>
+            <li>Rushing Touchdown 6pts</li>                                         
+            <li>Rushing Yards 1pt each 10 yards</li>                              
+            <li>Rushing 1st Down 1pt <i>-new-</i></li>
+            </ul>
+        <h4>Receivers</h4>                                                                
+            <ul>
+            <li>Receiving Touchdown 6pts</li>                                        
+            <li>Receiving Yards 1pt each 10 yards</li>                      
+            <li>Receptions 1pt  (PPR)</li>                                                      
+            </ul>
+        <h4>Kicker</h4>                                                                          
+            <ul>
+            <li>Extra Point 1pt</li>                                                                  
+            <li>FG 0-39 yards 3pts</li>                                                       
+            <li>FG 40-49 yards 4pts</li>                                                    
+            <li>FG 50+ yards 5pts</li>                                                      
+            </ul>
+        <h4>Defense</h4>                                                                         
+            <ul>
+            <li>PA 0 - 10pts</li>                                                                    
+            <li>PA 1-6 - 7pts</li>                                                                      
+            <li>PA 7-13 - 4pts</li>                                                                
+            <li>PA 14-20 - 1pt</li>                                                                    
+            <li>PA 21-27 - 0pts</li>                                                               
+            <li>PA 28-35 - minus 1pt</li>                                                        
+            <li>PA 36-42 - minus 4pts</li>                                              
+            <li>Sacks 1pt</li>                                                              
+            <li>Interceptions 2pts</li>                                                      
+            <li>Fumble Recovery 2pts</li>                                        
+            <li>Touchdowns 6pts</li>                                                      
+            <li>Safety 2pts</li>                                                              
+            <li>Blocked Kicks 2pts</li>                                                        
+            <li>Extra Point Return 2pts </li>
+            </ul>
+        <h4>Miscellaneous</h4>                                                           
+            <ul>
+            <li>Safety 2pts</li>                                                            
+            <li>Fumble -1pt</li>                                                    
+            <li>Fumble Loss -2pts</li>
+            </ul>
+    </div>
+    <div class="points"></div>  
+    <div class="winners"></div> 
+    <div class="socko">
+    <h2>For those that come in last place in this league, here is a list of options that you may choose as a punishment for being so bad.</h2>
+        <ol>
+        <li>Charitable Donation of $30 to an organization of choice with proof of receipt</li>
+        <li>The 2nd Place Finalist may choose a penalty</li>
+        <li>A video post to our WhatsApp of the loser eating an entire fist-sized onion like an apple</li>
+        </ol>
+        <p>NOTICE - Penalties are subject to change up until, but not after draft day.</p>
+    </div>
+    <div class="history"></div>
+    <div class="schedule"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
- 
 </html>
